# bmstu_oop

lab_1/: CMakeLists.txt  Makefile  README.md  clean.sh
lab_1/core/: errors.cpp  errors.h  tasks.cpp  tasks.h
lab_1/core/bindings/: binding.cpp  binding.h  bindings.cpp  bindings.h
lab_1/core/figure/: figure.cpp  figure.h
lab_1/core/points/: point.cpp  point.h  points.cpp  points.h
lab_1/ui/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
